# pmrs

./: Cargo.toml  README.md
logs/: min-invalid.jsonocel  min.jsonocel  ocel-complex-test.jsonocel  ocel-decomposition-test.jsonocel  ocel-transformation-test.jsonocel
src/: algo.rs  cli.yaml  importer.rs  lib.rs  main.rs  objects.rs  validation.rs
src/algo/: transformation.rs
src/algo/transformation/: ocdg.rs  ocel.rs
src/algo/transformation/ocdg/: feature_sharing.rs
src/algo/transformation/ocel/: features.rs  situations.rs  timeseries.rs
src/algo/transformation/ocel/features/: event_group.rs  event_point.rs  object_group.rs  object_point.rs  operator.rs
src/algo/transformation/ocel/situations/: event_situations.rs  object_situations.rs  situation_sublog.rs
src/importer/variants/: jsonocel.rs
src/objects/: linker.rs  ocdg.rs  ocel.rs
src/objects/ocdg/: decomposition.rs  exporter.rs  importer.rs  variants.rs
src/objects/ocdg/decomposition/: general_object_split.rs
src/objects/ocdg/exporter/: gexf.rs  variants.rs
src/objects/ocdg/exporter/variants/: gexf.rs
src/objects/ocdg/importer/: gexf.rs
src/objects/ocdg/importer/variants/: gexf.rs
src/objects/ocdg/variants/: gexf.rs
src/objects/ocel/: builder.rs  exporter.rs  importer.rs  validator.rs
src/objects/ocel/exporter/variants/: jsonocel.rs
src/objects/ocel/importer/variants/: jsonocel.rs
src/objects/ocel/validator/: variants.rs
src/objects/ocel/validator/variants/: jsonocel.rs
src/validation/variants/: jsonocel.rs
tests/: ocdg_integration.rs
