[package]
name = "pmrs"
version = "0.0.1"
edition = "2021"

homepage = "https://github.com/DerAndereJohannes/pmrs"
description = "Rust support to the Object-Centric Event Logs (OCEL) standard in process mining. Includes a library and a small cli-interface."
repository = "https://github.com/DerAndereJohannes/pmrs"
keywords = ["process-mining", "data-mining", "data-science", "machine-learning", "performance"]
categories = ["data-structures", "concurrency", "command-line-utilities", "science"]
license = "GNU General Public License v3.0"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.23", features = ["serialize"] }
ron = "0.7"
num_enum = "0.5"
strum = { version = "0.24", features = ["derive"] }
indexmap = { version = "1.9", features = ["serde"] }
nohash-hasher = "0.2"
rayon = "1.5"
itertools = "0.10"
array_tool = "1.0"
streaming-stats = "0.2"
chrono = { version = "0.4", features = ["serde"]}
ahash = "0.7"
jsonschema = "0.13"
petgraph = "0.6"
petgraph-graphml = "3.0"
num-traits = "0.2"
clap = {version = "3.2", features = ["yaml"]}
