[package]
name = "pmrs"
version = "0.0.2"
edition = "2021"

homepage = "https://github.com/DerAndereJohannes/pmrs"
description = "Rust support to process mining functions. Includes a library and a small cli-interface."
repository = "https://github.com/DerAndereJohannes/pmrs"
documentation = "https://github.com/DerAndereJohannes/pmrs"
keywords = ["process-mining", "data-mining", "data-science", "machine-learning", "performance"]
categories = ["data-structures", "concurrency", "command-line-utilities", "science"]
license = "LGPL-3.0-only"
readme = "README.md"
authors = ["Johannes Herforth"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.25", features = ["serialize"] }
ron = "0.8"
num_enum = "0.5"
strum = { version = "0.24", features = ["derive"] }
indexmap = { version = "1.9", features = ["serde"] }
nohash-hasher = "0.2"
rayon = "1.5"
itertools = "0.10"
streaming-stats = "0.2"
chrono = { version = "0.4", features = ["serde"] }
ahash = { version= "0.8", features = ["serde"] }
jsonschema = "0.16"
petgraph = "0.6"
num-traits = "0.2"
bimap = "0.6"
polars = {version = "0.24", features = ["dtype-u8"] }
lazy_static = "1.4"
